--- a/index.html
+++ b/index.html
@@ -119,23 +119,23 @@
         <div class="legenda">
 
             <div id="emotions">
-                <img src="/assets/cursor/amore.svg" alt="">
+                <img src="/assets/cursor/amore.png" alt="">
                 <div id="names">Love</div>
             </div>
             <div id="emotions">
-                <img src="/assets/cursor/serenita.svg" alt="">
+                <img src="/assets/cursor/serenita.png" alt="">
                 <div id="names">Serenity</div>
             </div>
             <div id="emotions">
-                <img src="/assets/cursor/gioia.svg" alt="">
+                <img src="/assets/cursor/gioia.png" alt="">
                 <div id="names">Joy</div>
             </div>
             <div id="emotions">
-                <img src="/assets/cursor/tristezza.svg" alt="">
+                <img src="/assets/cursor/tristezza.png" alt="">
                 <div id="names">Sadness</div>
             </div>
             <div id="emotions">
-                <img src="/assets/cursor/morte.svg" alt="">
+                <img src="/assets/cursor/morte.png" alt="">
                 <div id="names">Mourn</div>
             </div>
         </div>
