--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Seven Pounds</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="/assets/cursor/medusina.svg">
+    <link rel="icon" href="SevenPounds/assets/cursor/medusina.svg">
 
 </head>
 
@@ -112,33 +112,33 @@
             </h5>
         </div>
 
-        <!-- <div id="explanation">
+        <div id="explanation">
             During the duration of the movie, different moods follow one another. <br>
             Each circle represents a different emotion.
         </div>
         <div class="legenda">
 
             <div id="emotions">
-                <img class="logo" src="/assets/cursor/amore.png" alt="">
+                <img class="logo" src="SevenPounds/assets/cursor/amore.svg" alt="">
                 <div id="names">Love</div>
             </div>
             <div id="emotions">
-                <img class="logo" src="/assets/cursor/serenita.png" alt="">
+                <img class="logo" src="SevenPounds/assets/cursor/serenita.svg" alt="">
                 <div id="names">Serenity</div>
             </div>
             <div id="emotions">
-                <img class="logo" src="/assets/cursor/gioia.png" alt="">
+                <img class="logo" src="SevenPounds/assets/cursor/gioia.svg" alt="">
                 <div id="names">Joy</div>
             </div>
             <div id="emotions">
-                <img class="logo" src="/assets/cursor/tristezza.png" alt="">
+                <img class="logo" src="SevenPounds/assets/cursor/tristezza.svg" alt="">
                 <div id="names">Sadness</div>
             </div>
             <div id="emotions">
-                <img class="logo" src="/assets/cursor/morte.png" alt="">
+                <img class="logo" src="SevenPounds/assets/cursor/morte.svg" alt="">
                 <div id="names">Mourn</div>
             </div>
-        </div> -->
+        </div>
 
         <div class="story" id="story">
             <h1>
