tolti i cursori pazzerelli

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </h5>
         </div>
 
-        <div id="explanation">
+        <!-- <div id="explanation">
             During the duration of the movie, different moods follow one another. <br>
             Each circle represents a different emotion.
         </div>
@@ -138,7 +138,7 @@
                 <img class="logo" src="/assets/cursor/morte.png" alt="">
                 <div id="names">Mourn</div>
             </div>
-        </div>
+        </div> -->
 
         <div class="story" id="story">
             <h1>
